--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^5.0.0",
-    "mysql2": "^3.11.2"
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.2",
+    "nodemailer": "^6.9.16"
   }
 }
